2010-05-04 [colin]	0.25cvs2

	* src/claws.def
		Fix win32 build

2010-05-03 [holger]	0.25cvs1

	* configure.ac
		Require libindicate >= 0.3.0 for indicator module support
	* src/notification_indicator.c
		Update according to libindicate changes
	* src/notification_prefs.c
		Mark a string for translation

2010-05-01 [paul]	0.25

	0.25 released

2010-04-30 [paul]	0.24cvs6

	* po/cs.po
	* po/fi.po
	* po/hu.po
	* po/nl.po
	* po/pt_BR.po
	* po/sk.po
		updated by David Vachulka, Flammie Pirinen, Pader Rezso,
		Marcel Pol, Frederico Goncalves Guimaraes, Slavko

2010-03-24 [pawel]	0.24cvs5

	* commitHelper
		- Portability fixes
		- Add my name
	* src/notification_core.c
	* src/notification_plugin.c
	* src/notification_trayicon.c
		Fix build with GTK+ 2.19

2010-03-16 [holger]	0.24cvs4

	* .cvsignore
		More files to ignore

2010-02-23 [holger]	0.24cvs3

	* src/notification_plugin.c
		Fix type (thanks, Paul)

2010-02-23 [holger]	0.24cvs2

	* src/notification_plugin.c
		Hint at configuration

2010-02-09 [holger]	0.24cvs1

	* configure.ac
	* src/notification_foldercheck.c
		Drop support for GTK+ < 2.10

2010-01-08 [paul]	0.24

	0.24 released

2010-01-08 [paul]	0.23cvs13

	* configure.ac
	* po/nl.po
	* po/sk.po
		added by Marcel Pol and Slavko
	* po/ca.po
	* po/cs.po
	* po/fi.po
	* po/hu.po
	* po/id.po
	* po/ja.po
	* po/pt_BR.po
		updated by Miquel Oliete, David Vachulka, Tommi Pirinen,
		Pader Rezso, MSulchan Darmawan, kazken3, and Frederico
		Goncalves Guimaraes

2010-01-05 [colin]	0.23cvs12

	* po/fr.po
		Update french translation

2009-12-22 [holger]	0.23cvs11

	* gtkhotkey/x11/tomboykeybinder.c
		Turn off debug

2009-11-29 [holger]	0.23cvs10

	* src/notification_plugin.c
	* src/notification_trayicon.c
		Forgotten includes
	* src/notification_indicator.c
		Select default inbox of the account when
		clicking on an account in the indicator applet

2009-11-29 [holger]	0.23cvs9

	* src/Makefile.am
	* src/notification_hotkeys.c
	* src/notification_hotkeys.h